# robotart

./: .gitignore  .gitmodules  Dockerfile  README.md  launch_paint.bash  launch_rqt.bash  launch_rviz.bash  run.sh
config/: .bashrc  drawing.dxf  drawing2.dxf  ikfast61_redhawk.cpp  moveit.rosinstall  nadya.dxf
config/rviz/: robotart.rviz
scripts/: launch.bash  paint.bash  rqt.bash  rviz.bash  setup.bash
src/arm_pathplanning/: .gitignore  CMakeLists.txt  package.xml
src/arm_pathplanning/src/: descartes_demo.cpp  manipulator_tools.py  paint.py  paint2.py  painting_tools.py
src/redhawk_ctl/: .gitignore  CMakeLists.txt  package.xml  setup.py
src/redhawk_ctl/launch/: redhawk.launch  sim.launch
src/redhawk_ctl/msg/: redhawk_cmd.msg  redhawk_telem.msg
src/redhawk_ctl/src/: ManipCmd.py  TelemetryRecv.py  redhawk_cmd.py  redhawk_commander.py  redhawk_joint_state.py  redhawk_joy.py  redhawk_sim.py  redhawk_telemetry.py  redhawk_test.py
src/redhawk_moveit/: CMakeLists.txt  manifest.xml  package.xml
src/redhawk_moveit/config/: controller_definitions.yaml
src/redhawk_moveit/launch/: display.launch  gazebo.launch  redhawk.launch  redhawk_headless.launch
src/redhawk_moveit/meshes/: base_link.STL  base_link.STL.old  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
src/redhawk_moveit/src/: redhawk_bridge.py  redhawk_python.py
src/redhawk_moveit/urdf/: redhawk.urdf
src/redhawk_moveit_config/: CMakeLists.txt  _setup_assistant  package.xml
src/redhawk_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  redhawk.srdf  (+2 more)
(+15 files in other folders)
